// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalDetails renders as expected 1`] = `
<details>
  <summary>
    <div>
      Summary
    </div>
  </summary>
  <div>
    children
  </div>
</details>
`;

exports[`ConditionalDetails renders as expected 2`] = `
<div>
  Summary
</div>
`;
